--- a/Velocity_Obstacle.ipynb
+++ b/Velocity_Obstacle.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNuA5XLUpaYhFvrJBni0ZCL",
+      "authorship_tag": "ABX9TyNRpreA5bSh0wBtPaknDm5J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/ParzivalStark/Velocity-Obstacles/blob/main/Velocity_Obstacle.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Librerias necesarias"
+      ],
+      "metadata": {
+        "id": "zgR3PPMpQZja"
+      }
     },
     {
       "cell_type": "code",
